# rawssg

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  installer.sh  snapcat.md
.github/workflows/: build.yml  cli-release.yml  doc.yml
docs/: config.yaml
docs/content/: api-reference.md  configuration.md  first-post.md  index.md  installation.md  license.md  qna.md  quick-start.md
src/: compiler.rs  config.rs  create.rs  embedded.rs  init.rs  main.rs  serve.rs  types.rs
templates/: index.html  rss.xml  script.js  sitemap.xml  styles.css
templates/blog/: config.yaml  first-post.md
templates/homepage/: config.yml  first-post.md  index.md
