[package]
name = "rawssg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
built = { version = "0.8.1", features = ["chrono"] }
clap = { version = "4.6.1", features = ["derive"] }
notify = { version = "8.2.0", features = ["macos_kqueue"] }
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tiny_http = "0.12.0"
walkdir = "2.5.0"

[build-dependencies]
chrono = "0.4.45"
